# customer-support-agent

./: README.md  agent.py  app.py  config.py  pyproject.toml  requirements.txt  vector_store.py
default_docs/: about.txt  apis.txt  billings.txt  pricing.txt  privacy.txt  support.txt
